2008-04-08  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-utils.h, src/apt-utils.cc: New.
	* src/Makefile.am: Use them for the hildon-application-manager.
	Link it with libapt-pkg.
	* src/main (CmpFragment, DoCmpVersion): Removed.
	(compare_versions): Use the new compare_deb_versions from
	apt-utils.h instead.

2008-04-07  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.cc (CmpFragment, DoCmpVersion): New, from libapt-pkg.
	(compare_versions): Use them instead of doing it ourselves.

2008-04-07  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/main.cc (compare_versions) : instead of simply using
	g_ascii_strcasecmp, now we split the version strings and
	compare them token by token (N83764).

2008-04-04  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.h, src/util.h (start_entertaining_user): Added a new
	parameter, with_button, to allow creating an entertaining dialog
	without cancel button when needed. Updated callers (N75393).

	* src/operations.cc (ip_ensure_network): Updated so it now calls
	to start_entertaining_user with TRUE (N75393).
	(ip_abort_response): Likewise (N75393).
	(if_install): Likewise (N75393).
	(up_remove_with_info): Updated so it now calls to
	start_entertaining_user with FALSE (N75393).

	* src/main.cc (refresh_package_cache_without_user): Updated so it
	now calls to start_entertaining_user with TRUE (N75393).

2008-04-03  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc (ip_download_cur_retry_confirm): Do not ask
	whether to retry, we don't have the UI strings for that.  (Shame
	on me.)

2008-04-03  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/repo.cc (show_catalogue_dialog): call to allow_updating()
	after the dialog has been shown, to avoid possible overlaps.
	Partially fixes N83505.

2008-04-03  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (get_package_list_reply_temp): Set the global
	variable package_list_ready to its correct value (N83547).
